<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.nav_menu.settings.SettingsActivity"
    tools:showIn="@layout/activity_settings">


    <android.support.v4.widget.NestedScrollView
        android:scrollbars="vertical"
        android:scrollbarStyle="insideOverlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:layout_marginTop="@dimen/spacing_small">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/setting_profile"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:text="@string/setting_favoritSaya"
                        android:textSize="14sp" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_favorite_pengaturan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        tools:listitem="@layout/item_setting_cabang_olahraga" />

                    <!--android:onClick="@{viewModel.onAddFavoriteClick}"-->
                    <RelativeLayout
                        android:id="@+id/relative_layout_add_favorite"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/material_component_lists_single_line_height"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:paddingLeft="@dimen/material_component_lists_icon_left_padding"
                        android:paddingRight="@dimen/material_component_lists_right_padding">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/setting_tambahFavorit"
                            android:textColor="@color/material_light_black"
                            android:textSize="14sp" />

                    </RelativeLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:text="@string/setting_fakultasSaya"
                        android:textSize="14sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/material_component_lists_single_line_height"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:paddingLeft="@dimen/material_component_lists_icon_left_padding"
                        android:paddingRight="@dimen/material_component_lists_right_padding">

                        <Spinner
                            android:id="@+id/setting_fakultasSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.constraint.ConstraintLayout>



